support loading schemas from jar files